k8s/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: case-study-ui-service
  name: case-study-ui-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
     app: case-study-ui-deployment
